# dijkzicht

./: .gitattributes  .gitignore  README.md  dijkzicht.ipynb  dijkzicht_func.py  pyproject.toml  requirements.txt  setup.py
data/: df_gwl.csv  df_hm.csv  df_meta_deltaversterking.csv  df_profiles.csv  meta_deltaversterking.csv
data/deltaversterking/: dsn10_flipped.tif  dsn12_flipped.tif  dsn13_flipped.tif  dsn9_flipped.tif
docs/examples/: N27-2.ipynb
docs/examples/N27-2_data/: geoprofile_columns_robertson_Os_dp725-1080.pkl  gmws_met_dp_en_afstanden.csv  oc_gwl_os_dp725-1080.pkl  table_deltaversterking_Os_dp725-1080.csv  table_dijkpalen_Os_dp725-1080.csv  table_profielen_Os_dp725-1080.csv
docs/examples/N27-2_data/deltaversterking/os0725-0778/doorsnedes/: dsn10_flipped.tif  dsn11_flipped.tif  dsn12_flipped.tif  dsn1_flipped.tif  dsn2_flipped.tif  dsn3_flipped.tif  dsn4_flipped.tif  dsn5_flipped.tif  dsn7_flipped.tif  dsn8_flipped.tif  dsn9_flipped.tif
docs/examples/N27-2_data/deltaversterking/os0802-0869/doorsnedes/: dsn11_flipped.tif  dsn14_flipped.tif  dsn15_flipped.tif  dsn1_flipped.tif  dsn2_flipped.tif  dsn3_flipped.tif  dsn4_flipped.tif  dsn5_flipped.tif  dsn6_flipped.tif  dsn7_flipped.tif  dsn8_flipped.tif
docs/examples/N27-2_data/deltaversterking/os0870-0930/doorsnedes/: dsn10_flipped.tif  dsn16_flipped.tif  dsn20_flipped.tif  dsn33_flipped.tif  dsn38_flipped.tif  dsn3_flipped.tif  dsn46_flipped.tif  dsn52_flipped.tif  dsn58_flipped.tif  dsn65_flipped.tif  dsn73_flipped.tif  dsn85_flipped.tif
geolookup/: functions.py
(+29 files in other folders)
